finish search by filter for player
